<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seleccione lo siguiente acorde a su campo"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravedadInfestacion"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerInfestacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt_infestacion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravedadEtapaFeno"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerEtapaFenologica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt_etapa_fenologica" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravedadMerObj"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerMercadoObjetivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt_mercado_objetivo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravedadOrg"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinnerOrganico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt_organico" />

    <Button
        android:id="@+id/btnBuscarControlCorrectivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Buscar control correctivo"
        android:layout_marginTop="16dp" />


</LinearLayout>