<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.login.login"
    android:background="@drawable/fondo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginBoxForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:background="@drawable/white_rect_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/loginTvLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textColor="@color/gris"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/loginTvTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loginTilEmail"
            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/loginTilEmailHint"
            app:endIconMode="clear_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTvLayout"
            app:layout_constraintBottom_toTopOf="@id/loginTilPassword"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/loginTilPasswordHint"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTilEmail"
            app:layout_constraintBottom_toTopOf="@id/loginBtnAcceder"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtnAcceder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/green"
            android:textSize="16dp"
            android:text="@string/loginBtnAcceder"
            android:layout_marginBottom="10dp"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTilPassword"
            app:layout_constraintBottom_toTopOf="@id/loginTvNoTienesCuenta"
            />
        <TextView
            android:id="@+id/loginTvNoTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/loginTvNoTienesCuenta"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/loginTvCrearCuenta"
            app:layout_constraintTop_toBottomOf="@id/loginBtnAcceder"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/loginTvCrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/loginTvCrearCuenta"
            android:gravity="center"
            android:textColor="#1A237E"
            app:layout_constraintStart_toEndOf="@id/loginTvNoTienesCuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtnAcceder"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>